' Generated by UML Generator
' Encoded: tLZhRzis4F-UluBO9tcnKpV9WCBOWZf-j1wIEh3TT5jH1BH4sLnaIIKfBsdN_UqxadgGbEmQwO01_P27oBiVxuxtv4ikC1FP9ZhYzpHECSCRv4UOyxuGZ2upGIP-4i_f9uAwHsiQ4EHJvaVaw4XHeMiIK3n8Oi6IA28CVJv2gFCPG0Nrlw3h_cztuydLw6u--MDqT_dxOZJleIY9L-WNTDQzwtRLZsJfo5-KzxE09jCuUlH26f4ORqWFpK6GUDNgeMMIH0J7cl8MP3cCSYvm760MA8xzrCUSa42fvFdYeOUaOkH10CqseO4as63XhtTJVB7iCal0VbpPvBYq2IChoWLXUjF3QTf3l-8jZcXSGvaJjisDMW5iC8qzp5QyKE7zXnhZYB64pGXFavWJpI_PC-2XiP2VH58Cag0qHBbuJJZ7AtDTtSwnXUaPS6rK0ykN7AXM9Q2wwDSaIci-ytPsLT23b_pmPx3qUsd2nOeH_Z7gFNiM9JwErh3I--dyxEmPZl0z_eGtTy7o1njeFfgPI0MXJNNJdy_VJMV3dPGTYtn515nvJ7n1azXhAGV8lwnBec0Z9hIMcA_XeaC8BG86kuBR_taiFyPm764fd2ek31ShCK8Q1vU4YslfSzx7ZB37yTT052rSKXO9mncJBINVlR6LblquU4N49F045P7XZYiIC-Cpo1YMCBd_FXBCfk6CG1hWHAsrpB0m1LAd38d0DEBUHdvC0YENgErhs1vYWQiRKBddkxy1hUN_xkugwWn2RV7z0fLPpcNsMeshNr5Fyk0WaBRGf3ta4Xac02jhJQM5TyW7sk4b5mpxGXTev6fuA4pExMnf8stb3Kw6PkuN5105tgH5wUYiGIjTnkMNlyxYUycIxoehkkYU0zn6DcmRLQ1jP4AsSirkDO1d1IQiBmeSkPFNDbXMbc-LKigbWKOjwAhiMFcGDi96rkuggfMIIHo20B4F5naasH8Q84aeEKcWFRuqWDHi6eQS2DicnZcUSmIeN3kWZUhmscm6U66TQurNiywWX9LRfUIAnKItZRSe3p7MATU1QJHCTe4fifvsHYl_QbmZ0yi5AmVBXNeMhcnd7l3DkRqI_6rCGmejNturHhi4sGX7G-9Jhg0giUlUyLJLmAG3bd1-IvYImkv4LNzLxyMEiKn5UG7geHkQ4kWSYuea2LIexI7G5ctIt5FOLbPj8mLdhKcdwn3eM3Cio40onZpZXp9NQGzQt-XHNceWBtK3_pZrizRMEihecsgCpUF6s3oknwOcj4O6PH_dAE-90PeJbVWjfoTuGfdIgTHAJsffuKISriCzvP3ATKWXCRDoFU_SbW8PM_PmDCnZPFJWmz150latbGlwLlVJWBVicYpUWZEcQS94FicD4mPNuA1_XMWF_7YyW3Lm_DMZCvU5eV0OmL7X7-y_j17Tu5NrRPNyc4WKNGbwsYImxpOQyc3uGrY8VMAMV0o8Ie1_2YYhQUcXGq0iJKeWZqCvZQIF558vM7amIh-tRR5BAzS9dLvDCwj_FHgOFOALv_C4CuO9ldKummqMw-eU3I4TUpLPtkcub3ewJ6bWzqXEwCbN1YrfLSBKey4UQIkU8WWR0ikDgJnQgLxC3pm-p2MCD6HsVmTabZojM_hfvvKz-XbChSCP3hs-ceiz8K4PMwOrj-LOmxnQIT9k8zFZAuQNosA-M-aF01blKh8o2UIsUdKpAZwCOI6EE77648DBXzJOzX7oeDop7qLp7R9Lb_V-WwgDKSB93g6rHiuu-cxoPZXzfzxhLFq2mKwxvoyickdjQ7RLlodsdtTFpwtzo_wRuRpO_OpEkstq0dwUdyfVyh-pRXTzALKrXaqpUvZTSPcGZ4nQYrTdRhqX-1ucT2V_0Y5Ongd1_-NjGP-mXL5OCijNlTEXOXuKgq0QaxyQjzIaQHPjy_ORWwTEKOiM9QfdpvfN95w9zIIMRRur8m6IWbJEB_-nLXV91AofDY-pC2IC16h18keR0vanuiaZ6a4D-WA_pbOxZkCjqSIom1A7eesIJAIPi8nHMM17J5GMDGD3uG--yKv3Qws7fYc91xSsvSaYWIuvXzfDe07JrsfQLXKOMDJV4n-Q3mYUoelaIBtRIiR5Iq9zyUPRHKKW1zr5SWKVdXxJGP1Y5-ndlkMUd5nOZpBcqwFQizx7p6SnbxFsYjFf_7rXbR0QHTBfrDurZXf7l1-1qfsC6WbTgNOJrHNRAtoDeb5uiziyER4XYWs7w4AtARNLMhvqcqb9j6E_2Nx7hebWTuWxvNV9YYFgwxKYhzj7PLpDenSQzTNTcok5LBtSQhWY4rmlx1OaJnoDfxyaSP1jedy1
' URL: http://www.plantuml.com/plantuml/uml/tLZhRzis4F-UluBO9tcnKpV9WCBOWZf-j1wIEh3TT5jH1BH4sLnaIIKfBsdN_UqxadgGbEmQwO01_P27oBiVxuxtv4ikC1FP9ZhYzpHECSCRv4UOyxuGZ2upGIP-4i_f9uAwHsiQ4EHJvaVaw4XHeMiIK3n8Oi6IA28CVJv2gFCPG0Nrlw3h_cztuydLw6u--MDqT_dxOZJleIY9L-WNTDQzwtRLZsJfo5-KzxE09jCuUlH26f4ORqWFpK6GUDNgeMMIH0J7cl8MP3cCSYvm760MA8xzrCUSa42fvFdYeOUaOkH10CqseO4as63XhtTJVB7iCal0VbpPvBYq2IChoWLXUjF3QTf3l-8jZcXSGvaJjisDMW5iC8qzp5QyKE7zXnhZYB64pGXFavWJpI_PC-2XiP2VH58Cag0qHBbuJJZ7AtDTtSwnXUaPS6rK0ykN7AXM9Q2wwDSaIci-ytPsLT23b_pmPx3qUsd2nOeH_Z7gFNiM9JwErh3I--dyxEmPZl0z_eGtTy7o1njeFfgPI0MXJNNJdy_VJMV3dPGTYtn515nvJ7n1azXhAGV8lwnBec0Z9hIMcA_XeaC8BG86kuBR_taiFyPm764fd2ek31ShCK8Q1vU4YslfSzx7ZB37yTT052rSKXO9mncJBINVlR6LblquU4N49F045P7XZYiIC-Cpo1YMCBd_FXBCfk6CG1hWHAsrpB0m1LAd38d0DEBUHdvC0YENgErhs1vYWQiRKBddkxy1hUN_xkugwWn2RV7z0fLPpcNsMeshNr5Fyk0WaBRGf3ta4Xac02jhJQM5TyW7sk4b5mpxGXTev6fuA4pExMnf8stb3Kw6PkuN5105tgH5wUYiGIjTnkMNlyxYUycIxoehkkYU0zn6DcmRLQ1jP4AsSirkDO1d1IQiBmeSkPFNDbXMbc-LKigbWKOjwAhiMFcGDi96rkuggfMIIHo20B4F5naasH8Q84aeEKcWFRuqWDHi6eQS2DicnZcUSmIeN3kWZUhmscm6U66TQurNiywWX9LRfUIAnKItZRSe3p7MATU1QJHCTe4fifvsHYl_QbmZ0yi5AmVBXNeMhcnd7l3DkRqI_6rCGmejNturHhi4sGX7G-9Jhg0giUlUyLJLmAG3bd1-IvYImkv4LNzLxyMEiKn5UG7geHkQ4kWSYuea2LIexI7G5ctIt5FOLbPj8mLdhKcdwn3eM3Cio40onZpZXp9NQGzQt-XHNceWBtK3_pZrizRMEihecsgCpUF6s3oknwOcj4O6PH_dAE-90PeJbVWjfoTuGfdIgTHAJsffuKISriCzvP3ATKWXCRDoFU_SbW8PM_PmDCnZPFJWmz150latbGlwLlVJWBVicYpUWZEcQS94FicD4mPNuA1_XMWF_7YyW3Lm_DMZCvU5eV0OmL7X7-y_j17Tu5NrRPNyc4WKNGbwsYImxpOQyc3uGrY8VMAMV0o8Ie1_2YYhQUcXGq0iJKeWZqCvZQIF558vM7amIh-tRR5BAzS9dLvDCwj_FHgOFOALv_C4CuO9ldKummqMw-eU3I4TUpLPtkcub3ewJ6bWzqXEwCbN1YrfLSBKey4UQIkU8WWR0ikDgJnQgLxC3pm-p2MCD6HsVmTabZojM_hfvvKz-XbChSCP3hs-ceiz8K4PMwOrj-LOmxnQIT9k8zFZAuQNosA-M-aF01blKh8o2UIsUdKpAZwCOI6EE77648DBXzJOzX7oeDop7qLp7R9Lb_V-WwgDKSB93g6rHiuu-cxoPZXzfzxhLFq2mKwxvoyickdjQ7RLlodsdtTFpwtzo_wRuRpO_OpEkstq0dwUdyfVyh-pRXTzALKrXaqpUvZTSPcGZ4nQYrTdRhqX-1ucT2V_0Y5Ongd1_-NjGP-mXL5OCijNlTEXOXuKgq0QaxyQjzIaQHPjy_ORWwTEKOiM9QfdpvfN95w9zIIMRRur8m6IWbJEB_-nLXV91AofDY-pC2IC16h18keR0vanuiaZ6a4D-WA_pbOxZkCjqSIom1A7eesIJAIPi8nHMM17J5GMDGD3uG--yKv3Qws7fYc91xSsvSaYWIuvXzfDe07JrsfQLXKOMDJV4n-Q3mYUoelaIBtRIiR5Iq9zyUPRHKKW1zr5SWKVdXxJGP1Y5-ndlkMUd5nOZpBcqwFQizx7p6SnbxFsYjFf_7rXbR0QHTBfrDurZXf7l1-1qfsC6WbTgNOJrHNRAtoDeb5uiziyER4XYWs7w4AtARNLMhvqcqb9j6E_2Nx7hebWTuWxvNV9YYFgwxKYhzj7PLpDenSQzTNTcok5LBtSQhWY4rmlx1OaJnoDfxyaSP1jedy1
' Generated on: 2026-04-13T10:08:56.189640300

@startuml
skinparam classAttributeIconSize 0
hide circle

class MediaController {
  -{static} MAX_FILE_SIZE_BYTES: long = 30_000_000
  --
  -isAudioOnly(filename: String): boolean
  -isVideoOnly(filename: String): boolean
  -isStandardVideo(filename: String): boolean
  +seedMedia(ctx: Context): void
  +matchMedia(ctx: Context): void
}

class MediaRoutes {
  +{static} registerRoutes(app: Javalin): void
}

class Server {
  +{static} main(args: String[]): void
}

class ErrorResponse {
  +status: int
  +errorCode: String
  +errorMessage: String
  --
  +ErrorResponse(status: int, errorCode: String, errorMessage: String)
}

class AudioHelper {
  -{static} URL: String = "jdbc:postgresql://localhost:5433/alakazam_db"
  -{static} USER: String = "alakazam"
  -{static} PASSWORD: String = "alakazam"
  --
  -{static} getConnection(): Connection
  +{static} insertAudioHashes(frames: List<FrameFingerprint>): void
  +{static} findBestMatch(queryFrames: List<FrameFingerprint>): MatchResult
}

class MovieHelper {
  -{static} URL: String = "jdbc:postgresql://localhost:5433/alakazam_db"
  -{static} USER: String = "alakazam"
  -{static} PASSWORD: String = "alakazam"
  --
  -{static} getConnection(): Connection
  +{static} insertMovieAndGetId(title: String, genre: String, duration: int, yearOfRelease: int): String
  +{static} getMovieDetails(movieId: String): MovieMetaData
}

class VideoHelper {
  -{static} URL: String = "jdbc:postgresql://localhost:5433/alakazam_db"
  -{static} USER: String = "alakazam"
  -{static} PASSWORD: String = "alakazam"
  --
  -{static} getConnection(): Connection
  +{static} insertVideoHashes(frames: List<FrameFingerprint>): void
  +{static} findBestMatch(queryFrames: List<FrameFingerprint>): MatchResult
}

class AudioFingerprint {
  -frames: List<FrameFingerprint>
  --
  +AudioFingerprint()
  +AudioFingerprint(frames: List<FrameFingerprint>)
  +addHash(frame: FrameFingerprint): void
  +getFrames(): List<FrameFingerprint>
}

abstract class Fingerprint {
  +getFrames(): List<FrameFingerprint>
}

class FrameFingerprint {
  -videoID: String
  -timestamp: int
  -hash: long
  -chunkID: int
  --
  +FrameFingerprint(videoID: String, timestamp: int, hash: long, chunkID: int)
  +getVideoID(): String
  +getTimestamp(): int
  +getHash(): long
  +getChunkID(): int
}

class MatchResult {
  -mediaId: String
  -confidence: double
  -matchedHashes: int
  -timeOffset: int
  --
  +MatchResult(mediaId: String, confidence: double, matchedHashes: int, timeOffset: int)
  +getMediaId(): String
  +getConfidence(): double
  +getMatchedHashes(): int
  +getTimeOffset(): int
  +isMatch(): boolean
}

class MovieMetaData {
  +title: String
  +genre: String
  +duration: int
  +yearOfRelease: int
  --
  +MovieMetaData(title: String, genre: String, duration: int, yearOfRelease: int)
}

class UnifiedMatchResponse {
  +finalDecision: String
  +mediaId: String
  +genre: String
  +duration: int
  +yearOfRelease: int
  +isCrossVerified: boolean
  +statusMessage: String
  +audioDetails: PipelineDetails
  +videoDetails: PipelineDetails
  --
  +UnifiedMatchResponse(audio: MatchResult, video: MatchResult)
  -evaluateConsensus(audio: MatchResult, video: MatchResult): void
  +applyMetadata(meta: MovieMetaData): void
}

class PipelineDetails {
  +confidence: double
  +matchedHashes: int
  +timeOffset: int
  +match: boolean
  --
  +PipelineDetails(confidence: double, matchedHashes: int, timeOffset: int, match: boolean)
}

class VideoFingerprint {
  -frames: List<FrameFingerprint>
  -videoId: String
  -videoTitle: String
  --
  +VideoFingerprint(frames: List<FrameFingerprint>)
  +getFrames(): List<FrameFingerprint>
  +getVideoId(): String
  +getVideoTitle(): String
}

class MediaDurationExceededException {
  +MediaDurationExceededException(message: String)
}

class UnsupportedMediaFormatException {
  +UnsupportedMediaFormatException(message: String)
}

class FFTStrategy {
  +{static} fft(real: double[], imag: double[]): void
  +generate(media: Media): AudioFingerprint
}

interface Fingerprintable {
  ~generateFingerprint(): Fingerprint
}

interface FingerprintStrategy {
  ~generate(samples: Media): Fingerprint
}

class PHashStrategy {
  +generate(media: Media): VideoFingerprint
}

class Audio {
  +Audio(id: String, title: String, audio: File)
  +Audio(id: String, title: String, audioPath: String)
  +generateFingerprint(): AudioFingerprint
}

abstract class Media {
  -id: String
  -title: String
  -file: File
  --
  +Media(id: String, title: String, file: File)
  +getId(): String
  +getTitle(): String
  +getFile(): File
  +generateFingerprint(): Fingerprint
}

class Video {
  -videoId: String
  -videoTitle: String
  -video: File
  --
  +Video(id: String, title: String, video: File)
  +Video(id: String, title: String, videoPath: String)
  +generateFingerprint(): VideoFingerprint
  +getVideoId(): String
  +getVideoTitle(): String
  +getVideo(): File
  +videoHasher(): void
}

class AudioFrameGrabber {
  -grabber: FFmpegFrameGrabber
  -started: boolean = false
  --
  +AudioFrameGrabber(mediaFile: File)
  +extractAllSamples(): double[]
  +close(): void
}

class AudioHasher {
  -{static} WINDOW_SIZE: int = 2048
  -{static} OVERLAP: int = 1024
  -{static} BANDS: int = { 40, 80, 120, 180, 300 }
  --
  +{static} generate(mediaId: String, samples: double[]): AudioFingerprint
  -{static} getPeaks(mag: double[]): int[]
}

class VideoFrameGrabber {
  -grabber: FFmpegFrameGrabber
  -started: boolean = false
  -converter: Java2DFrameConverter = new Java2DFrameConverter()
  --
  +VideoFrameGrabber(video: File)
  +VideoFrameGrabber(videoPath: String)
  +start(): void
  +getLengthInTime(): long
  +grabFrame(): Frame
  +grabFrameToImage(): BufferedImage
  +grabFrameAtTimestamp(timestamp: long): Frame
  +grabFrameAtTimestampToImage(timestamp: long): BufferedImage
  +saveImage(image: BufferedImage, outputPath: String): void
  +close(): void
}

class VideoFrameHasher {
  -imageConverter: Java2DFrameConverter = new Java2DFrameConverter()
  -frameConverter: OpenCVFrameConverter.ToMat = new OpenCVFrameConverter.ToMat()
  -pHash: PHash = PHash.create()
  --
  +hashImage(image: BufferedImage): long
  +hashFrame(frame: Frame): long
  -matToLong(hash: Mat): long
}

AudioHelper ..> MatchResult
MovieHelper ..> MovieMetaData
VideoHelper ..> MatchResult
AudioFingerprint --|> Fingerprint
AudioFingerprint o-- FrameFingerprint
UnifiedMatchResponse *-- PipelineDetails
UnifiedMatchResponse ..> MatchResult
UnifiedMatchResponse ..> MovieMetaData
VideoFingerprint --|> Fingerprint
VideoFingerprint o-- FrameFingerprint
FFTStrategy ..|> FingerprintStrategy
FFTStrategy ..> Media
FFTStrategy ..> AudioFingerprint
Fingerprintable ..> Fingerprint
FingerprintStrategy ..> Media
FingerprintStrategy ..> Fingerprint
PHashStrategy ..|> FingerprintStrategy
PHashStrategy ..> Media
PHashStrategy ..> VideoFingerprint
Audio --|> Media
Audio ..> AudioFingerprint
Media ..|> Fingerprintable
Media ..> Fingerprint
Video --|> Media
Video ..> VideoFingerprint
AudioHasher ..> AudioFingerprint
@enduml